--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,12 @@
             </intent-filter>
         </receiver>
         
+        <receiver android:name="com.example.trafficrank.ShutDownReceiver">
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
+            </intent-filter>
+        </receiver>
+        
         <service android:name="com.example.trafficrank.trafficService"></service>
         
     </application>
